Fix/null check proxy parsing (#239)
* Fix missing null checks and unsafe array access in proxy parsing

- Add safe parseProxyString() method to validate proxy format before accessing array indices
- Validate proxy string format (host:port) with proper error handling
- Add port range validation (1-65535)
- Prevent ArrayIndexOutOfBoundsException and NumberFormatException
- Centralize proxy parsing logic in reusable helper method
- Add ProxyParts inner class to safely hold parsed host and port
- Improve error logging for invalid proxy formats

Fixes unsafe array access in:
- checkHostname() method (lines 67-68)
- swapProxy() method (lines 122-123)

* Upgrade Spring Boot to 3.3.5 and Gradle to 9.1.0

- Upgrade Spring Boot from 1.5.9.RELEASE to 3.3.5
- Upgrade Gradle from 8.14.3 to 9.1.0 (supports Java 25)
- Modernize build.gradle to use plugins {} block syntax
- Migrate logging from Log4j to SLF4J (Spring Boot standard)
- Update HttpStatus to HttpStatusCode for Spring Boot 3.x compatibility
- Update JSON library to latest version (20240303)
- Update Node.js plugin to modern version
- Fix null checks and unsafe array access in proxy parsing
- Add safe parseProxyString() method with validation
- Make loggers static final (best practice)
- Remove unused imports

All Java code compiles successfully with Java 25 and Gradle 9.1.0

* upgrades for react

* fix audit

* npm update

* add tessl

* Refactor tests to use React Testing Library

- Updated Entry, EntryBox, EntryForm, EntryList, and HeaderBar tests to utilize React Testing Library instead of Enzyme for rendering components and querying elements.
- Enhanced test assertions to check for the presence of specific elements and their properties using screen queries.
- Improved readability and maintainability of test cases by adopting modern testing practices.

* tesl and errors fix.

---------

Co-authored-by: jkruck <jkruck@jkruck.org>