@@ -1,8 +1,10 @@
 package willitconnect.model;
 
-import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 
-import java.net.URL;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.time.Instant;
 import java.util.Date;
 import java.util.Objects;
@@ -69,10 +71,11 @@ public class CheckedEntry {
 
     public boolean isValidUrl() {
         try {
-            new URL(entry);
+            new URI(entry).toURL();
             return true;
-        } catch (Exception e) {}
-        return false;
+        } catch (URISyntaxException | IllegalArgumentException | MalformedURLException e) {
+            return false;
+        }
     }
 
     /**
@@ -86,9 +89,9 @@ public class CheckedEntry {
 
     /**
      * Set the status of the request
-     * @param statusCode in an HttpStatus to save ourselves validation headache
+     * @param statusCode in an HttpStatusCode to save ourselves validation headache
      */
-    public void setHttpStatus(HttpStatus statusCode) {
+    public void setHttpStatus(HttpStatusCode statusCode) {
         httpStatus = statusCode.value();
     }
 
